--- a/TaskMan/app/src/main/res/values/strings.xml
+++ b/TaskMan/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Task man</string>
     <string name="add">Add</string>
     <string name="task_description">Edit the task</string>
+    <string name="edit">Edit</string>
 </resources>
