--- a/TaskMan/app/src/main/res/values/strings.xml
+++ b/TaskMan/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="add">Add</string>
     <string name="task_description">Edit the task</string>
     <string name="edit">Edit</string>
+    <string name="clear_all">clear all</string>
 </resources>
