--- a/TaskMan/app/src/main/res/values/strings.xml
+++ b/TaskMan/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="task_description">Edit the task</string>
     <string name="edit">Edit</string>
     <string name="clear_all">clear all</string>
+    <string name="sort">sort</string>
 </resources>
