#9 Reminder Can be set
User can set alarms as for reminding them about their tasks

--- a/TaskMan/app/src/main/res/values/strings.xml
+++ b/TaskMan/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="complete">Complete</string>
     <string name="edit_task_description">You can edit the task</string>
     <string name="delete_task_description">You can delete the task</string>
+    <string name="reminder_button_description">A button for setting the reminder</string>
+    <string name="taskman">Task has created</string>
+    <string name="set_reminder">Set the Reminder</string>
+    <string name="reminder_set">Set Reminder</string>
 </resources>
