--- a/TaskMan/app/src/main/res/values/strings.xml
+++ b/TaskMan/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="clear_all_tasks">Clear all</string>
     <string name="clear_all">Clear All</string>
     <string name="sort">Sort</string>
+    <string name="start_date">Start On</string>
     <string name="enter_your_text_here">Enter your task here</string>
     <string name="complete">Complete</string>
     <string name="edit_task_description">You can edit the task</string>
